--- a/docker-front/dockerfile
+++ b/docker-front/dockerfile
@@ -5,5 +5,6 @@ RUN apt-get update && apt-get install -y apt-transport-https
 RUN apt-get install -y apache2 
 RUN apt-get install -y apache2-utils 
 RUN apt-get clean 
+COPY ./index.html /var/www/html/index.html
 EXPOSE 80
 CMD ["apache2ctl", "-D", "FOREGROUND"]
